--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 $headline-size: 48px;
 $paragraph-size: 14px;
+$color-accent: rgba(202, 176, 57, 1);
 
 html,
 body {
@@ -7,6 +8,30 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-family: "Teko", sans-serif;
+}
+button {
+  border: 0;
+  outline: 0;
+  background-color: rgba($color: $color-accent, $alpha: 0);
+  color: $color-accent;
+  font-size: 24px;
+  line-height: 22px;
+  letter-spacing: 4px;
+  font-family: "Teko", sans-serif;
+  width: auto;
+  text-align: left;
+  padding: 0;
+  cursor: pointer;
+  max-width: 120px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    color: white !important;
+  }
 }
 .wrapper {
   width: 100%;
@@ -48,8 +73,14 @@ body {
       line-height: 140px;
       #dodge {
         font-size: 210px;
-        color: rgb(202, 176, 57);
+        color: $color-accent;
         margin: 0px 0px 0px -10px;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-image: url("../img/hero-text-bg.jpg");
+        background-size: auto;
+        background-attachment: unset;
+        background-position: 0%;
       }
       #challenger {
         margin: 0px 0px 0px 100px;
@@ -66,7 +97,8 @@ body {
         margin: 0px 0px 30px 0px;
         letter-spacing: 4px;
         max-width: 300px;
-        border-bottom: 1px solid rgba(202, 176, 57, 0.3);
+        padding: 0px 0px 20px 0px;
+        border-bottom: 1px solid rgba($color: $color-accent, $alpha: 0.3);
       }
       .hero-section__content__specs__block {
         font-family: "Poppins", sans-serif;
@@ -154,7 +186,7 @@ body {
           }
         }
         .events__btn {
-          color: rgb(202, 176, 57);
+          color: $color-accent;
           font-size: 24px;
           line-height: 22px;
           align-self: end;
@@ -203,7 +235,7 @@ body {
             height: 60px;
           }
           .news__description__btn {
-            color: rgb(202, 176, 57);
+            color: $color-accent;
             font-size: 24px;
             line-height: 22px;
             align-self: end;
@@ -247,11 +279,13 @@ body {
         content: "about";
         display: block;
         position: absolute;
-        top: 200px;
-        left: 350px;
-        color: rgba($color: white, $alpha: 0.05);
-        font-size: 200px;
-        font-family: "Poppins", sans-serif;
+        top: 220px;
+        left: 400px;
+        background: linear-gradient(90deg, #0c0c0c, #242424);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        color: #242424;
+        font-size: 210px;
         font-weight: 600;
         z-index: 1;
       }
@@ -277,15 +311,16 @@ body {
         "."
         ".";
       grid-area: specializations;
-      font-family: "Poppins", sans-serif;
+
       align-self: center;
       height: 400px;
       .about-section__content__specializations__headline {
-        font-size: 30px;
+        font-size: $headline-size;
         line-height: 40px;
-        font-weight: 500;
+        letter-spacing: 4px;
       }
       .about-section__content__specializations__item {
+        font-family: "Poppins", sans-serif;
         .about-section__content__specializations__item__icon {
           svg {
             width: 50px;
@@ -303,12 +338,12 @@ body {
     .about-section__content__text-block {
       grid-area: text-block;
       align-self: center;
-      font-family: "Poppins", sans-serif;
+
       height: 400px;
       .about-section__content__text-block__headline {
-        font-size: 30px;
+        font-size: $headline-size;
         line-height: 40px;
-        font-weight: 500;
+        letter-spacing: 4px;
       }
       .about-section__content__text-block__paragraph {
         font-size: $paragraph-size;
@@ -316,10 +351,11 @@ body {
         line-height: 22px;
         color: rgba($color: white, $alpha: 0.6);
         margin: 40px 0px 0px 0px;
+        font-family: "Poppins", sans-serif;
 
         span {
-          color: rgb(202, 176, 57);
-          border-bottom: 1px solid rgba(202, 176, 57, 0.3);
+          color: $color-accent;
+          border-bottom: 1px solid rgba($color: $color-accent, $alpha: 0.3);
         }
       }
     }
@@ -352,6 +388,279 @@ body {
     }
   }
 }
+
+.slider-section {
+  color: white;
+  position: relative;
+  background-color: #0c0c0c;
+  .slider-section__headline {
+    position: absolute;
+    top: 0px;
+    left: 500px;
+    z-index: 2;
+    font-size: 140px;
+    font-weight: 600;
+    line-height: 140px;
+    max-width: 400px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: url("../img/text-bg.jpg");
+    background-size: auto;
+    background-attachment: unset;
+    background-position: 0%;
+  }
+  .slider-section__content {
+    max-width: 100%;
+    padding: 0;
+    margin-bottom: 0 !important;
+    position: relative;
+    .slide__wrapper {
+      width: 100%;
+      height: 100vh;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      .slide__wrapper__container {
+        box-sizing: border-box;
+        max-width: 1440px;
+        margin: 0 auto;
+        padding: 0px 40px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: ". model-description";
+        align-items: center;
+        gap: 0px 0px;
+        .slide__description {
+          grid-area: model-description;
+          font-family: "Poppins", sans-serif;
+          font-weight: 200;
+          font-size: $paragraph-size;
+          line-height: 22px;
+          position: relative;
+          margin: 20px 0px 0px 0px;
+          display: grid;
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr 1fr 1fr;
+          grid-template-areas:
+            "headline"
+            "item"
+            "price";
+          align-items: center;
+          height: 365px;
+          max-width: 400px;
+          .slide__description__headline {
+            font-family: "Teko", sans-serif;
+            font-size: $headline-size;
+            line-height: 1;
+            font-weight: 400;
+            align-self: start;
+            height: 40px;
+            margin: 0px 0px 30px 0px;
+            letter-spacing: 4px;
+            grid-area: headline;
+            height: 40px;
+            margin: 0px 0px 10px 0px;
+            position: relative;
+            &:before {
+              content: "models";
+              display: block;
+              position: absolute;
+              top: -60px;
+              left: 380px;
+              background: linear-gradient(90deg, #0c0c0c, #242424);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+              color: #242424;
+              font-size: 210px;
+              font-weight: 600;
+              z-index: 1;
+            }
+          }
+          .slide__description__item {
+            margin: 15px 0px;
+            grid-area: item;
+            height: auto;
+          }
+          .slide__description__price {
+            align-self: start;
+            grid-area: price;
+            margin: 15px 0px 0px 0px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr;
+            align-items: center;
+            .slide__description__price__text {
+              color: $color-accent;
+              height: 40px;
+              font-family: "Teko", sans-serif;
+              font-size: $headline-size;
+              line-height: 1;
+              font-weight: 400;
+              letter-spacing: 4px;
+            }
+            .slide__description__price__button-wrapper {
+              position: relative;
+              width: 180px;
+              height: 50px;
+
+              .slide-btn {
+                max-width: 180px;
+                width: 180px;
+                height: 50px;
+                background: rgba($color: $color-accent, $alpha: 0.2);
+                transition: 1s ease-in-out;
+                text-align: center;
+                text-transform: uppercase;
+                svg {
+                  position: absolute;
+                  left: 0;
+                  top: 0;
+                  fill: none;
+                  stroke: white;
+                  stroke-dasharray: 150 480;
+                  stroke-dashoffset: 150;
+                  transition: 1s ease-in-out;
+                }
+              }
+
+              .slide-btn:hover {
+                transition: 1s ease-in-out;
+                background: rgba($color: $color-accent, $alpha: 1);
+              }
+
+              .slide-btn:hover svg {
+                stroke-dashoffset: -480;
+              }
+            }
+          }
+          &:before {
+            content: " ";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: -20px;
+            width: 1px;
+            height: 100%;
+            background-color: rgba($color: $color-accent, $alpha: 0.3);
+          }
+        }
+      }
+    }
+    .slide-1 {
+      background-image: url("../img/slide-1.jpg");
+    }
+    .slide-2 {
+      background-image: url("../img/slide-2.jpg");
+    }
+    .slide-3 {
+      background-image: url("../img/slide-3.jpg");
+    }
+
+    .prev {
+      background-image: url("../img/arrow.svg");
+      background-position: center;
+      background-size: 70%;
+      background-repeat: no-repeat;
+      width: 32px;
+      height: 32px;
+      position: absolute;
+      top: 35%;
+      left: 16%;
+      z-index: 2;
+      cursor: pointer;
+      background-color: rgba($color: $color-accent, $alpha: 0.1);
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+    }
+    .next {
+      background-image: url("../img/arrow.svg");
+      -moz-transform: scaleX(-1);
+      -webkit-transform: scaleX(-1);
+      -o-transform: scaleX(-1);
+      transform: scaleX(-1);
+      -ms-filter: fliph;
+      filter: fliph;
+      background-position: center;
+      background-size: 70%;
+      background-repeat: no-repeat;
+      width: 32px;
+      height: 32px;
+      position: absolute;
+      top: 35%;
+      left: 13%;
+      z-index: 2;
+      cursor: pointer;
+      background-color: rgba($color: $color-accent, $alpha: 0.1);
+      background-color: rgba($color: $color-accent, $alpha: 0.1);
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+    }
+    .prev:hover,
+    .next:hover {
+      background-color: rgba($color: $color-accent, $alpha: 0.3);
+    }
+
+    .slick-dots {
+      position: absolute;
+      top: 15px;
+      left: 66%;
+      padding: 0;
+      list-style: none;
+      text-align: center;
+      width: 100px;
+      height: 50px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: ". . .";
+      align-items: center;
+      gap: 0px 0px;
+      li {
+        width: 8px;
+        height: 8px;
+        margin: 10px;
+        padding: 0;
+        cursor: pointer;
+        border-radius: 50%;
+
+        button {
+          font-size: 0;
+          line-height: 0;
+          padding: 0;
+          width: 8px;
+          height: 8px;
+          border-radius: 50%;
+          cursor: pointer;
+          border: 0;
+          color: transparent;
+          outline: none;
+          background-color: $color-accent;
+          opacity: 0.3;
+          -webkit-transition: all 0.3s ease-in-out;
+          -moz-transition: all 0.3s ease-in-out;
+          -o-transition: all 0.3s ease-in-out;
+          -ms-transition: all 0.3s ease-in-out;
+          transition: all 0.3s ease-in-out;
+        }
+      }
+      .slick-active {
+        button {
+          background: $color-accent;
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+
 .lightHeader {
   background-color: rgba($color: white, $alpha: 0.03);
   -webkit-transition: all 0.3s ease-in-out;
@@ -412,7 +721,7 @@ body {
         width: 180px;
 
         span {
-          color: rgb(202, 176, 57);
+          color: $color-accent;
           font-weight: 500;
         }
       }
@@ -430,7 +739,7 @@ body {
         gap: 0px 0px;
         grid-template-areas: "nav-list search";
         z-index: 3;
-        border-bottom: 1px solid rgba(202, 176, 57, 0.3);
+        border-bottom: 1px solid rgba($color: $color-accent, $alpha: 0.3);
 
         ul {
           display: grid;
@@ -467,7 +776,7 @@ body {
             }
 
             &:hover a {
-              color: rgba(202, 176, 57, 1);
+              color: rgba($color: $color-accent, $alpha: 1);
             }
           }
           :nth-child(1) {
