--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ button:hover {
 
 .wrapper {
   width: 100%;
+  position: relative;
 }
 
 .wrapper__container {
@@ -393,7 +394,7 @@ button:hover {
   grid-template-rows: 1fr;
   grid-template-areas: ". model-description";
   align-items: center;
-  gap: 0px 0px;
+  gap: 0px 40px;
 }
 .slider-section .slider-section__content .slide__wrapper .slide__wrapper__container .slide__description {
   grid-area: model-description;
@@ -472,6 +473,8 @@ button:hover {
   width: 180px;
   height: 50px;
   background: rgba(202, 176, 57, 0.2);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   transition: 1s ease-in-out;
   text-align: center;
   text-transform: uppercase;
@@ -607,6 +610,281 @@ button:hover {
 .slider-section .slider-section__content .slick-dots .slick-active button {
   background: #cab039;
   opacity: 1;
+}
+
+.gallery-section {
+  background-color: #0c0c0c;
+  color: white;
+}
+.gallery-section .gallery-section__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto 1fr 1fr;
+  gap: 0px 0px;
+  grid-template-areas: "btn btn btn btn" "headline . . ." ". . . .";
+  position: relative;
+  padding: 0px 40px 150px 40px;
+}
+.gallery-section .gallery-section__content .gallery-section__content__more-btn {
+  grid-area: btn;
+  justify-self: end;
+  max-width: 200px;
+  margin: 0px 0px 50px 0px;
+}
+.gallery-section .gallery-section__content .gallery-section__content__headline {
+  grid-area: headline;
+  font-size: 48px;
+  line-height: 1;
+  align-self: start;
+  height: 40px;
+  margin: 0px 0px 30px 0px;
+  letter-spacing: 4px;
+}
+.gallery-section .gallery-section__content .gallery-section__content__headline:before {
+  content: "gallery";
+  display: block;
+  position: absolute;
+  top: -140px;
+  left: 35%;
+  background: linear-gradient(90deg, #0c0c0c, #242424);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #242424;
+  font-size: 210px;
+  font-weight: 600;
+  z-index: 1;
+}
+.gallery-section .gallery-section__content .gallery-section__content__item {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 350px;
+  position: relative;
+  z-index: 2;
+}
+.gallery-section .gallery-section__content .gallery-section__content__item:hover:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  background-image: url("../img/plus.svg");
+  background-position: center;
+  background-size: 10%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  background-color: rgba(202, 176, 57, 0.3);
+}
+.gallery-section .gallery-section__content #photo-1 {
+  background-image: url("../img/photo-1.jpg");
+}
+.gallery-section .gallery-section__content #photo-2 {
+  background-image: url("../img/photo-2.jpg");
+}
+.gallery-section .gallery-section__content #photo-3 {
+  background-image: url("../img/photo-3.jpg");
+}
+.gallery-section .gallery-section__content #photo-4 {
+  background-image: url("../img/photo-4.jpg");
+}
+.gallery-section .gallery-section__content #photo-5 {
+  background-image: url("../img/photo-5.jpg");
+}
+.gallery-section .gallery-section__content #photo-6 {
+  background-image: url("../img/photo-6.jpg");
+}
+
+.contacts-section {
+  background-color: #0c0c0c;
+  color: white;
+  position: relative;
+  background-image: url("../img/contacts-bg.jpg");
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.contacts-section .contacts-section__content {
+  display: grid;
+  padding: 0px 40px 300px 40px;
+}
+.contacts-section .contacts-section__content .contacts-section__content__headline {
+  justify-self: center;
+  font-size: 48px;
+  line-height: 1;
+  align-self: start;
+  height: 40px;
+  margin: 0px 0px 150px 0px;
+  letter-spacing: 4px;
+  position: relative;
+  z-index: 2;
+}
+.contacts-section .contacts-section__content__form .form__block {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 1px 1px;
+  grid-template-areas: "contacts . . textarea" "contacts . . textarea" "btn btn btn btn";
+  grid-area: form;
+  align-items: center;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__contacts {
+  grid-area: contacts;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__contacts .form__block__contacts__item {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: 14px;
+  line-height: 22px;
+  color: rgba(255, 255, 255, 0.6);
+  margin: 10px 0px;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__contacts .form__block__contacts__item i {
+  font-size: 18px;
+  margin: 0px 10px 0px 0px;
+  color: rgba(255, 255, 255, 0.3);
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__contacts .phone {
+  font-size: 36px;
+  margin: 0;
+  line-height: 1;
+  align-self: start;
+  height: 40px;
+  letter-spacing: 4px;
+  font-family: "Teko", sans-serif;
+  color: white;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__contacts :last-child {
+  margin: 10px 0px 0px 0px;
+}
+.contacts-section .contacts-section__content__form .form__block input {
+  border: 0;
+  outline: 0;
+  padding: 0px 20px;
+  font-family: "Poppins", sans-serif;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  align-self: stretch;
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+}
+.contacts-section .contacts-section__content__form .form__block textarea {
+  grid-area: textarea;
+  border: 0;
+  outline: 0;
+  resize: none;
+  font-family: "Poppins", sans-serif;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  padding: 15px 20px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  align-self: stretch;
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+}
+.contacts-section .contacts-section__content__form .form__block input:focus,
+.contacts-section .contacts-section__content__form .form__block textarea:focus {
+  background-color: rgba(202, 176, 57, 0.4);
+}
+.contacts-section .contacts-section__content__form .form__block input:focus::placeholder,
+.contacts-section .contacts-section__content__form .form__block textarea:focus::placeholder {
+  color: white;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__button-wrapper {
+  position: relative;
+  width: 180px;
+  height: 50px;
+  grid-area: btn;
+  justify-self: end;
+  margin: 50px 0px 0px 0px;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__button-wrapper .form-btn {
+  max-width: 180px;
+  width: 180px;
+  height: 50px;
+  background: rgba(202, 176, 57, 0.2);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  transition: 1s ease-in-out;
+  text-align: center;
+  text-transform: uppercase;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__button-wrapper .form-btn svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: white;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__button-wrapper .form-btn:hover {
+  transition: 1s ease-in-out;
+  background: #cab039;
+}
+.contacts-section .contacts-section__content__form .form__block .form__block__button-wrapper .form-btn:hover svg {
+  stroke-dashoffset: -480;
+}
+.contacts-section:before {
+  content: "contacts";
+  display: block;
+  position: absolute;
+  top: -130px;
+  left: 5%;
+  background: linear-gradient(90deg, #0c0c0c, #242424);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #242424;
+  font-size: 210px;
+  font-weight: 600;
+  z-index: 1;
+}
+
+.footer-section {
+  color: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  bottom: 50px;
+}
+.footer-section .footer-section__content {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas: "logo" "author";
+}
+.footer-section .footer-section__content .footer-section__content__logo {
+  font-size: 36px;
+  text-decoration: none;
+  color: white;
+  align-self: center;
+  grid-area: top-logo;
+  font-weight: 300;
+  width: 180px;
+  grid-area: logo;
+}
+.footer-section .footer-section__content .footer-section__content__logo span {
+  color: #cab039;
+  font-weight: 500;
+}
+.footer-section .footer-section__content .footer-section__content__author {
+  grid-area: author;
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  font-weight: 200;
 }
 
 .lightHeader {
