--- a/css/style.css
+++ b/css/style.css
@@ -339,17 +339,6 @@ button:hover {
   border-bottom: 1px solid rgba(202, 176, 57, 0.3);
 }
 
-@media (max-width: 768px) {
-  .hero-section .hero-section__content {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 0.6fr;
-    gap: 0px 0px;
-    grid-template-areas: "." ".";
-    justify-content: center;
-    align-content: center;
-  }
-}
 .slider-section {
   color: white;
   position: relative;
@@ -961,6 +950,8 @@ button:hover {
   grid-template-areas: "nav-list search";
   z-index: 3;
   border-bottom: 1px solid rgba(202, 176, 57, 0.3);
+  position: relative;
+  width: 100%;
 }
 .header-container .header .header__content .header__content__navigation ul {
   display: grid;
@@ -1010,15 +1001,224 @@ button:hover {
 .header-container .header .header__content .header__content__navigation ul :nth-child(4) {
   grid-area: nav-item4;
 }
-.header-container .header .header__content .header__content__navigation__search {
+.header-container .header .header__content .header__content__navigation .header__content__navigation__search {
   display: grid;
-  justify-content: end;
-  align-content: center;
+  align-items: center;
+  justify-content: center;
+  justify-self: end;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  color: white;
 }
-.header-container .header .header__content .header__content__navigation__search svg {
+.header-container .header .header__content .header__content__navigation .header__content__navigation__search:hover > .search-input {
+  width: 100%;
+  padding: 0px 20px;
+}
+.header-container .header .header__content .header__content__navigation .header__content__navigation__search:hover > .search-btn svg * {
+  fill: white;
+}
+.header-container .header .header__content .header__content__navigation .header__content__navigation__search:hover > .search-btn:before {
+  content: " ";
+  background-color: white;
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+}
+.header-container .header .header__content .header__content__navigation .search-btn {
+  color: white;
+  background-color: rgba(202, 176, 57, 0.3);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 60px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+.header-container .header .header__content .header__content__navigation .search-btn svg {
   width: 20px;
   height: auto;
-  cursor: pointer;
+}
+.header-container .header .header__content .header__content__navigation .search-input {
+  border: none;
+  background-color: #cab039;
+  outline: none;
+  padding: 0px;
+  color: white;
+  font-size: 16px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  width: 0px;
+  height: 100%;
+  box-sizing: border-box;
+}
+.header-container .header .header__content .header__content__navigation .search-input::placeholder {
+  color: white;
+}
+
+@media (max-width: 1280px) {
+  .content {
+    max-width: 1280px;
+    padding: 0px 40px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+
+  .hero-section {
+    height: 100vh;
+  }
+  .hero-section .hero-section__content {
+    margin: 0px auto 200px auto;
+  }
+  .hero-section .hero-section__content .hero-section__content__headline {
+    font-size: 100px;
+    line-height: 100px;
+    order: 1;
+  }
+  .hero-section .hero-section__content .hero-section__content__headline #dodge {
+    font-size: 160px;
+    margin: 0px 0px 0px -10px;
+  }
+  .hero-section .hero-section__content .hero-section__content__headline #challenger {
+    margin: 0px 0px 0px 60px;
+  }
+  .hero-section .hero-section__content__blured-block {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    background-color: rgba(255, 255, 255, 0.03);
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content {
+    padding: 0px 40px;
+    box-sizing: border-box;
+    max-width: 1440px;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;
+    grid-template-areas: ". .";
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events {
+    padding: 40px 0px;
+    box-sizing: border-box;
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0px 40px;
+    align-self: center;
+    grid-template-areas: "headline headline" "item1 item2";
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__headline {
+    grid-area: headline;
+    font-size: 48px;
+    line-height: 1;
+    align-self: start;
+    height: 40px;
+    margin: 0px 0px 30px 0px;
+    letter-spacing: 4px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__item {
+    align-self: start;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    line-height: 22px;
+    color: rgba(255, 255, 255, 0.6);
+    height: 60px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__item span {
+    font-weight: 500;
+    color: white;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__events .events__btn {
+    color: #cab039;
+    font-size: 24px;
+    line-height: 22px;
+    align-self: end;
+    margin: 40px 0px 0px 0px;
+    letter-spacing: 4px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news {
+    height: 300px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas: "image .";
+    align-self: center;
+    gap: 0px 40px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__img {
+    grid-area: image;
+    background-image: url("../img/hero-bg-2.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 300px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description {
+    padding: 40px 0px;
+    box-sizing: border-box;
+    display: grid;
+    height: 300px;
+    align-self: center;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__headline {
+    font-size: 48px;
+    line-height: 1;
+    align-self: start;
+    height: 40px;
+    margin: 0px 0px 30px 0px;
+    letter-spacing: 4px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__paragraph {
+    align-self: start;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    line-height: 22px;
+    color: rgba(255, 255, 255, 0.6);
+    height: 60px;
+  }
+  .hero-section .hero-section__content__blured-block .hero-section__content__blured-block__content .hero-section__content__blured-block__content__news .news__description .news__description__btn {
+    color: #cab039;
+    font-size: 24px;
+    line-height: 22px;
+    align-self: end;
+    margin: 40px 0px 0px 0px;
+    letter-spacing: 4px;
+  }
+}
+@media (max-width: 768px) {
+  .hero-section .hero-section__content {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 0.6fr;
+    gap: 0px 0px;
+    grid-template-areas: "." ".";
+    justify-content: center;
+    align-content: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
